Bug 320350 - notes plasmoid has unreadable text by default on certain plasma themes
Summary: notes plasmoid has unreadable text by default on certain plasma themes
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-notes (other bugs)
Version First Reported In: 4.10.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-27 13:40 UTC by Wolfgang Bauer
Modified: 2013-07-12 11:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2013-05-27 13:40:00 UTC
The notes plasmoid has the hardcoded default background color yellow, but takes the  text color from the plasma theme by default.
This could result in unreadable notes if you use a plasma theme with a bright textbutton color (worst case: yellow).

Reproducible: Always

Steps to Reproduce:
1. set a plasma theme with a bright textbutton color, f.e. Produkt
2. create a notes plasmoid on the desktop
3.
Actual Results:  
You get a yellow note with a bright (f.e. light grey) text, which is hard to read.

Expected Results:  
I would propose that the widget should switch to a black background if the current plasma theme specifies a bright textbutton color.

I will prepare a patch for this on reviewboard.
Comment 1 Wolfgang Bauer 2013-06-20 11:43:12 UTC
(In reply to comment #0)
> I will prepare a patch for this on reviewboard.

Done: https://git.reviewboard.kde.org/r/110701/
Comment 2 Wolfgang Bauer 2013-06-25 19:17:55 UTC
Git commit 0e0b98c373a8fd68e1fb4bcb1219b62092ad5cc4 by Wolfgang Bauer.
Committed on 25/06/2013 at 19:13.
Pushed by wbauer into branch 'KDE/4.10'.

Make the notes plasmoid change the background color according to the
current plasma theme's text color

The notes plasmoid by default takes the text color from the current
plasma theme but has "yellow" hardcoded as default background color.
This can lead to unreadable notes by default with certain plasma themes,
e.g. Produkt.
It's especially annoying if you're using such a theme because you can't
globally change the default notes colors but have to do it for each note
on its own (f.e. every time after pasting text to the desktop by
pressing the middle mouse button).

This patch changes the default background color to black if the text
color is brighter than a certain threshold.
Also the background color is re-read from the config on plasma theme
change to make it change as well if necessary.
FIXED-IN: 4.10.5
REVIEW: 110701

M  +11   -2    applets/notes/notes.cpp

http://commits.kde.org/kdeplasma-addons/0e0b98c373a8fd68e1fb4bcb1219b62092ad5cc4
Comment 3 Wolfgang Bauer 2013-06-25 19:42:04 UTC
Git commit dfc81cd32181f3f6cb4160bc74bb8d1bee76c1f2 by Wolfgang Bauer.
Committed on 25/06/2013 at 19:39.
Pushed by wbauer into branch 'master'.

Make the notes plasmoid change the background color according to the
current plasma theme's text color

The notes plasmoid by default takes the text color from the current
plasma theme but has "yellow" hardcoded as default background color.
This can lead to unreadable notes by default with certain plasma themes,
e.g. Produkt.
It's especially annoying if you're using such a theme because you can't
globally change the default notes colors but have to do it for each note
on its own (f.e. every time after pasting text to the desktop by
pressing the middle mouse button).

This patch changes the default background color to black if the text
color is brighter than a certain threshold.
Also the background color is re-read from the config on plasma theme
change to make it change as well if necessary.
REVIEW: 110701

M  +11   -2    applets/notes/notes.cpp

http://commits.kde.org/kdeplasma-addons/dfc81cd32181f3f6cb4160bc74bb8d1bee76c1f2
Comment 4 naraesk 2013-07-12 09:19:58 UTC
Just to make sure: About what notes plasmoid are we talking?
The normale one, that exists since KDE 4.1 or so? Or the akonadi notes plasmoid that exists since KDE 4.8 or 4.9?

Because of thi first one I can change the color (background + text) without any problems.  The akonadi plasmoid always has a yellow background, which is indeed annoying. But even with KDE 4.10.5 the text color is white (with a dark thema), so the patch doesn't seem to work. 

Anyway, I would prefer to be able to change the background color of the plasmoid, because this is why we have plasma themes and this plasmoid is the only one I know with a fixed background color.
Comment 5 Wolfgang Bauer 2013-07-12 10:09:59 UTC
(In reply to comment #4)
> Just to make sure: About what notes plasmoid are we talking?
> The normale one, that exists since KDE 4.1 or so? Or the akonadi notes
> plasmoid that exists since KDE 4.8 or 4.9?
This is about the normal notes plasmoid (I don't remember since when this exists).
The one you get if you paste some text to the desktop (click on an empty space on the desktop with the middle mouse button)

> Because of thi first one I can change the color (background + text) without
> any problems. 
That's true, but it had yellow as default. And the text color from the current plasma theme.
So if you use a (dark) theme with a bright text color, you get an unreadable note on the desktop, so you had to change the text or background color for each one separately (there is no global way to change this).

This is what is fixed now. The default background color is now black (instead of yellow) if the text color is bright.

> The akonadi plasmoid always has a yellow background, which is
> indeed annoying. But even with KDE 4.10.5 the text color is white (with a
> dark thema), so the patch doesn't seem to work. 
> 
> Anyway, I would prefer to be able to change the background color of the
> plasmoid, because this is why we have plasma themes and this plasmoid is the
> only one I know with a fixed background color.

For the akonotes plasmoid you should open a new bug.
Comment 6 naraesk 2013-07-12 11:24:10 UTC
Ok, I see. Thanks for clarification. :-)