Make the notes plasmoid change the background color according to the current plasma theme's text color

The notes plasmoid by default takes the text color from the current
plasma theme but has "yellow" hardcoded as default background color.
This can lead to unreadable notes by default with certain plasma themes,
e.g. Produkt.
It's especially annoying if you're using such a theme because you can't
globally change the default notes colors but have to do it for each note
on its own (f.e. every time after pasting text to the desktop by
pressing the middle mouse button).

This patch changes the default background color to black if the text
color is brighter than a certain threshold.
Also the background color is re-read from the config on plasma theme
change to make it change as well if necessary.

BUG: 320350
REVIEW: 110701